--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <button class="other" onclick="addTax();">Tax</button>
             </td>
             <td>
-                <button class="operator" onclick="calc('/');">/</button>
+                <button class="operator" onclick="calc('/');">÷</button>
             </td>
         </tr>
         <tr>
@@ -255,7 +255,7 @@
                 <button onclick="push(9);">9</button>
             </td>
             <td>
-                <button class="operator" onclick="calc('*');">*</button>
+                <button class="operator" onclick="calc('*');">×</button>
             </td>
         </tr>
         <tr>
