--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </td>
         </tr>
         <tr>
-            <td>
+            <td colspan="2">
                 <button class="other" onclick="reset();">AC</button>
             </td>
             <td>
